// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component Seed - test Seed Backup - snapshot 1`] = `
<View
  onLayout={[Function]}
  style={
    {
      "backgroundColor": "#011401",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
  >
    <View>
      <View
        style={
          [
            {},
            {
              "alignItems": "center",
              "backgroundColor": "#011401",
              "display": "flex",
              "minHeight": 50,
              "paddingBottom": 10,
              "paddingTop": 0,
            },
          ]
        }
        testID="header"
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 8,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "marginTop": 12,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#011401",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "minHeight": 25,
                    "minWidth": 25,
                    "padding": 0,
                  }
                }
              >
                <
                  color="#5a8c5a"
                  icon={
                    {
                      "icon": [
                        576,
                        512,
                        [],
                        "f3c1",
                        "M384 96c0-35.3 28.7-64 64-64s64 28.7 64 64l0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-70.7-57.3-128-128-128S320 25.3 320 96l0 64-160 0c-35.3 0-64 28.7-64 64l0 224c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64l-32 0 0-64z",
                      ],
                      "iconName": "lock-open",
                      "prefix": "fas",
                    }
                  }
                  size={20}
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "left": 0,
            "paddingBottom": 11.5,
            "paddingLeft": 20,
            "paddingRight": 11.5,
            "paddingTop": 16,
            "position": "absolute",
            "top": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 14,
            }
          }
        />
      </View>
      <View
        style={
          [
            {},
            {
              "padding": 13,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <Image
          source={
            {
              "testUri": "../../../assets/img/logobig-zingo.png",
            }
          }
          style={
            {
              "borderRadius": 6,
              "height": 30,
              "resizeMode": "contain",
              "width": 30,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": "100%",
        },
        {
          "backgroundColor": "#031124",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginVertical": 20,
        }
      }
    >
      <ActivityIndicator
        color="#18bd18"
        size="large"
      />
      <Text
        style={
          {
            "color": "#c3c3c3",
            "fontSize": 15,
            "fontWeight": "400",
            "marginTop": 12,
            "opacity": 1,
            "textAlign": "center",
          }
        }
      >
        text translated
      </Text>
    </View>
  </View>
</View>
`;

exports[`Component Seed - test Seed Change - snapshot 1`] = `
<View
  onLayout={[Function]}
  style={
    {
      "backgroundColor": "#011401",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
  >
    <View>
      <View
        style={
          [
            {},
            {
              "alignItems": "center",
              "backgroundColor": "#011401",
              "display": "flex",
              "minHeight": 50,
              "paddingBottom": 10,
              "paddingTop": 0,
            },
          ]
        }
        testID="header"
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 8,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "marginTop": 12,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#011401",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "minHeight": 25,
                    "minWidth": 25,
                    "padding": 0,
                  }
                }
              >
                <
                  color="#5a8c5a"
                  icon={
                    {
                      "icon": [
                        576,
                        512,
                        [],
                        "f3c1",
                        "M384 96c0-35.3 28.7-64 64-64s64 28.7 64 64l0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-70.7-57.3-128-128-128S320 25.3 320 96l0 64-160 0c-35.3 0-64 28.7-64 64l0 224c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64l-32 0 0-64z",
                      ],
                      "iconName": "lock-open",
                      "prefix": "fas",
                    }
                  }
                  size={20}
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "left": 0,
            "paddingBottom": 11.5,
            "paddingLeft": 20,
            "paddingRight": 11.5,
            "paddingTop": 16,
            "position": "absolute",
            "top": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 14,
            }
          }
        />
      </View>
      <View
        style={
          [
            {},
            {
              "padding": 13,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <Image
          source={
            {
              "testUri": "../../../assets/img/logobig-zingo.png",
            }
          }
          style={
            {
              "borderRadius": 6,
              "height": 30,
              "resizeMode": "contain",
              "width": 30,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": "100%",
        },
        {
          "backgroundColor": "#031124",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginVertical": 20,
        }
      }
    >
      <ActivityIndicator
        color="#18bd18"
        size="large"
      />
      <Text
        style={
          {
            "color": "#c3c3c3",
            "fontSize": 15,
            "fontWeight": "400",
            "marginTop": 12,
            "opacity": 1,
            "textAlign": "center",
          }
        }
      >
        text translated
      </Text>
    </View>
  </View>
</View>
`;

exports[`Component Seed - test Seed New - snapshot 1`] = `
<View
  onLayout={[Function]}
  style={
    {
      "backgroundColor": "#011401",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
  >
    <View>
      <View
        style={
          [
            {},
            {
              "alignItems": "center",
              "backgroundColor": "#011401",
              "display": "flex",
              "minHeight": 50,
              "paddingBottom": 10,
              "paddingTop": 0,
            },
          ]
        }
        testID="header"
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 8,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "marginTop": 12,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#011401",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "minHeight": 25,
                    "minWidth": 25,
                    "padding": 0,
                  }
                }
              >
                <
                  color="#5a8c5a"
                  icon={
                    {
                      "icon": [
                        576,
                        512,
                        [],
                        "f3c1",
                        "M384 96c0-35.3 28.7-64 64-64s64 28.7 64 64l0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-70.7-57.3-128-128-128S320 25.3 320 96l0 64-160 0c-35.3 0-64 28.7-64 64l0 224c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64l-32 0 0-64z",
                      ],
                      "iconName": "lock-open",
                      "prefix": "fas",
                    }
                  }
                  size={20}
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "left": 0,
            "paddingBottom": 11.5,
            "paddingLeft": 20,
            "paddingRight": 11.5,
            "paddingTop": 16,
            "position": "absolute",
            "top": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 14,
            }
          }
        />
      </View>
      <View
        style={
          [
            {},
            {
              "padding": 13,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <Image
          source={
            {
              "testUri": "../../../assets/img/logobig-zingo.png",
            }
          }
          style={
            {
              "borderRadius": 6,
              "height": 30,
              "resizeMode": "contain",
              "width": 30,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": "100%",
        },
        {
          "backgroundColor": "#031124",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 15,
          "fontWeight": "900",
          "marginTop": 0,
          "opacity": 1,
          "padding": 20,
          "textAlign": "center",
        }
      }
    >
      text translated
    </Text>
    <View
      style={
        {
          "borderColor": "#c3c3c3",
          "borderRadius": 10,
          "borderWidth": 1,
          "margin": 10,
          "padding": 10,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#c3c3c3",
              "fontSize": 15,
              "fontWeight": "400",
              "opacity": 1,
              "textAlign": "center",
            }
          }
        >
          pepe lolo titi
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View />
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#c3c3c3",
                "marginTop": 0,
                "minHeight": 48,
                "padding": 10,
                "textAlign": "center",
                "textDecorationLine": "underline",
              }
            }
          >
            text translated
          </Text>
        </View>
        <View />
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "marginTop": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#c3c3c3",
            "opacity": 0.65,
            "textAlign": "center",
          }
        }
      >
        text translated
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#c3c3c3",
              "fontSize": 15,
              "fontWeight": "400",
              "opacity": 1,
              "textAlign": "center",
            }
          }
        >
          1900100
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Component Seed - test Seed Server - snapshot 1`] = `
<View
  onLayout={[Function]}
  style={
    {
      "backgroundColor": "#011401",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
  >
    <View>
      <View
        style={
          [
            {},
            {
              "alignItems": "center",
              "backgroundColor": "#011401",
              "display": "flex",
              "minHeight": 50,
              "paddingBottom": 10,
              "paddingTop": 0,
            },
          ]
        }
        testID="header"
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 8,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "marginTop": 12,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#011401",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "minHeight": 25,
                    "minWidth": 25,
                    "padding": 0,
                  }
                }
              >
                <
                  color="#5a8c5a"
                  icon={
                    {
                      "icon": [
                        576,
                        512,
                        [],
                        "f3c1",
                        "M384 96c0-35.3 28.7-64 64-64s64 28.7 64 64l0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-70.7-57.3-128-128-128S320 25.3 320 96l0 64-160 0c-35.3 0-64 28.7-64 64l0 224c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64l-32 0 0-64z",
                      ],
                      "iconName": "lock-open",
                      "prefix": "fas",
                    }
                  }
                  size={20}
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "left": 0,
            "paddingBottom": 11.5,
            "paddingLeft": 20,
            "paddingRight": 11.5,
            "paddingTop": 16,
            "position": "absolute",
            "top": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 14,
            }
          }
        />
      </View>
      <View
        style={
          [
            {},
            {
              "padding": 13,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <Image
          source={
            {
              "testUri": "../../../assets/img/logobig-zingo.png",
            }
          }
          style={
            {
              "borderRadius": 6,
              "height": 30,
              "resizeMode": "contain",
              "width": 30,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": "100%",
        },
        {
          "backgroundColor": "#031124",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginVertical": 20,
        }
      }
    >
      <ActivityIndicator
        color="#18bd18"
        size="large"
      />
      <Text
        style={
          {
            "color": "#c3c3c3",
            "fontSize": 15,
            "fontWeight": "400",
            "marginTop": 12,
            "opacity": 1,
            "textAlign": "center",
          }
        }
      >
        text translated
      </Text>
    </View>
  </View>
</View>
`;

exports[`Component Seed - test Seed View - snapshot 1`] = `
<View
  onLayout={[Function]}
  style={
    {
      "backgroundColor": "#011401",
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
  >
    <View>
      <View
        style={
          [
            {},
            {
              "alignItems": "center",
              "backgroundColor": "#011401",
              "display": "flex",
              "minHeight": 50,
              "paddingBottom": 10,
              "paddingTop": 0,
            },
          ]
        }
        testID="header"
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 8,
              "justifyContent": "center",
              "marginHorizontal": 5,
              "marginTop": 12,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#011401",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "minHeight": 25,
                    "minWidth": 25,
                    "padding": 0,
                  }
                }
              >
                <
                  color="#5a8c5a"
                  icon={
                    {
                      "icon": [
                        576,
                        512,
                        [],
                        "f3c1",
                        "M384 96c0-35.3 28.7-64 64-64s64 28.7 64 64l0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-70.7-57.3-128-128-128S320 25.3 320 96l0 64-160 0c-35.3 0-64 28.7-64 64l0 224c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64l-32 0 0-64z",
                      ],
                      "iconName": "lock-open",
                      "prefix": "fas",
                    }
                  }
                  size={20}
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "left": 0,
            "paddingBottom": 11.5,
            "paddingLeft": 20,
            "paddingRight": 11.5,
            "paddingTop": 16,
            "position": "absolute",
            "top": 0,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 14,
            }
          }
        />
      </View>
      <View
        style={
          [
            {},
            {
              "padding": 13,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <Image
          source={
            {
              "testUri": "../../../assets/img/logobig-zingo.png",
            }
          }
          style={
            {
              "borderRadius": 6,
              "height": 30,
              "resizeMode": "contain",
              "width": 30,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "height": "100%",
        },
        {
          "backgroundColor": "#031124",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginVertical": 20,
        }
      }
    >
      <ActivityIndicator
        color="#18bd18"
        size="large"
      />
      <Text
        style={
          {
            "color": "#c3c3c3",
            "fontSize": 15,
            "fontWeight": "400",
            "marginTop": 12,
            "opacity": 1,
            "textAlign": "center",
          }
        }
      >
        text translated
      </Text>
    </View>
  </View>
</View>
`;
